--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -48,11 +48,11 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: build
-          path: packages/server/terraform
+          path: terraform
 
       - id: terraform
         name: Deploy Production
-        working-directory: packages/server/terraform
+        working-directory: terraform
         run: |
           terraform init
           terraform refresh
