--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 3001",
     "start:dev": "next dev -p 3001",
     "start:watch": "next dev -p 3001",
-    "build": "next build && mv out/ ./../../build/client",
+    "build": "next build",
+    "deploy": "aws s3 sync ./out/ s3://$WEBSITE_BUCKET/ --delete",
     "start": "next start -p 3001",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
