--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -128,6 +128,8 @@ jobs:
             package-lock.json
             packages/*/package.json
 
+      - uses: ./.github/actions/credentials
+
       - uses: ./.github/actions/infrastructure # Will set the Env Vars at outputs /terraform/outputs.tf
         with:
           environment: ${{ inputs.environment }}
