--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -145,6 +145,8 @@ jobs:
       - name: Build
         shell: bash
         run: npm run build
+        env:
+          NEXT_PUBLIC_API_BASE_URL: ${{ env.API_BASE_URL }}
 
       - name: Deploy
         shell: bash
