--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,6 +62,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DATABASE_URL: mysql://app:app@localhost:3306/app
+      API_BASE_URL: http://localhost:3000
     steps:
       - uses: actions/checkout@v3
 
@@ -90,20 +91,17 @@ jobs:
       - name: Building Application
         shell: bash
         run: |
-          npm run --workspace packages/server build:server
+          npm run --workspace packages/server nest:build
 
       - name: Starting localhost server
         shell: bash
         run: |
-          nohup sh -c 'npm run build:server:start --workspace packages/server' &
+          nohup sh -c 'npm run nest:start --workspace packages/server' &
           ./scripts/wait_for_status.sh http://localhost:3000/api/checks/readiness 200
 
       - run: npm run test --workspace packages/acceptance
         shell: bash
         name: Acceptance Tests
-        env:
-          API_URL: http://localhost:3000/api
-          TRPC_URL: http://localhost:3000/trpc
 
   lambda:
     name: Lambda Tests
@@ -122,23 +120,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: ./.github/actions/credentials
-
-      - name: Create DB Branch
-        uses: ./.github/actions/create_pscale_db_branch
-        with:
-          db_name: ${{ env.DB_NAME }}
-          org_name: ${{ env.ORG_NAME }}
-          branch_name: ${{ inputs.environment }}
-
-      - id: dburl
-        name: Create DB Branch Password
-        uses: ./.github/actions/create_pscale_db_branch_password
-        with:
-          db_name: ${{ env.DB_NAME }}
-          org_name: ${{ env.ORG_NAME }}
-          branch_name: ${{ inputs.environment }}
-
       - uses: actions/setup-node@v3
         with:
           cache: 'npm'
@@ -147,53 +128,44 @@ jobs:
             package-lock.json
             packages/*/package.json
 
-      - uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.4.4
-          terraform_wrapper: false
+      - uses: ./.github/actions/credentials
 
-      - run: npm install
+      - uses: ./.github/actions/infrastructure # Will set the Env Vars at outputs /terraform/outputs.tf
+        with:
+          environment: ${{ inputs.environment }}
+
+      - name: Dependencies
         shell: bash
-        name: Dependencies
+        run: npm install
 
       - run: npm run migration:run --workspace packages/server
         shell: bash
         name: Migrations
-        env:
-          DATABASE_URL: ${{ steps.dburl.outputs.DATABASE_URL }}
 
-      - run: npm run --workspace packages/server build:lambda
-        name: Build Lambda
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.npm
+            ${{ github.workspace }}/packages/client/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
 
-      - id: terraform
-        name: Deploy ${{ inputs.environment }}
-        working-directory: packages/server/terraform
-        run: |
-          terraform init
-          terraform workspace select -or-create ${{ inputs.environment }}
-          terraform refresh
-          terraform apply -auto-approve
-          echo "API_GATEWAY_URL=$(terraform output API_GATEWAY_URL | jq -r)" >> $GITHUB_OUTPUT
+      - name: Build
+        shell: bash
+        run: npm run build
         env:
-          TF_VAR_DATABASE_URL: ${{ steps.dburl.outputs.DATABASE_URL }}
+          NEXT_PUBLIC_API_BASE_URL: ${{ env.API_BASE_URL }}
+
+      - name: Deploy
+        shell: bash
+        run: npm run deploy
 
       - name: Wait ${{ inputs.environment }}
         run: |
-          ./scripts/wait_for_status.sh "$API_GATEWAY_URL/api/checks/readiness" 200
-          ./scripts/wait_for_status.sh "$API_GATEWAY_URL/api/articles" 200
-        env:
-          API_GATEWAY_URL: ${{ steps.terraform.outputs.API_GATEWAY_URL }}
+          ./scripts/wait_for_status.sh "$API_BASE_URL/api/checks/readiness" 200
+          ./scripts/wait_for_status.sh "$API_BASE_URL/api/articles" 200
 
       - run: npm run test --workspace packages/acceptance
         shell: bash
         name: Acceptance Tests
-        env:
-          API_URL: ${{ steps.terraform.outputs.API_GATEWAY_URL }}/api
-          TRPC_URL: ${{ steps.terraform.outputs.API_GATEWAY_URL }}/trpc
-
-      - name: Uploading Build
-        uses: actions/upload-artifact@v3
-        with:
-          name: build
-          path: |
-            packages/server/terraform/lambda.zip
