--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "node": "18"
   },
   "scripts": {
-    "format": "prettier --write .",
-    "infra": "docker-compose up -d --wait && npm run migration:run --workspace packages/server && docker-compose logs -f",
+    "format": "prettier --write . && cd terraform && terraform fmt && cd -",
+    "infra": "docker-compose up -d --wait && npm run migration:run --workspace packages/server",
+    "infra:logs": "npm run infra && docker-compose logs -f",
+    "build": "npm run build --workspaces --if-present",
+    "deploy": "npm run deploy --workspaces --if-present",
     "typecheck": "npm run typecheck --workspaces --if-present",
     "lint:fix": "npm run lint:fix --workspaces --if-present",
     "start:dev": "DEBUG=1 concurrently --kill-others --kill-others-on-fail \"npm run start:dev --workspace packages/server\" \"npm run start:dev --workspace packages/client\"",
@@ -44,5 +47,8 @@
     "bracketSameLine": true,
     "arrowParens": "avoid",
     "printWidth": 120
+  },
+  "dependencies": {
+    "zod": "^3.21.4"
   }
 }
