--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build:lambda": "ncc build src/lambda.ts --minify --out build/lambda && cd build/lambda && zip -r ../../terraform/lambda.zip * && cd - && rm -rf build/lambda",
-    "build:server": "ncc build src/server.ts --minify --out build/server",
-    "build": "npm run build:lambda && npm run build:server",
-    "build:server:start": "NODE_ENV=production node build/server/index.js",
+    "build": "ncc build src/lambda.ts --minify --out build/lambda && cd build/lambda && zip -r ../../lambda.zip * && cd - && rm -rf build/lambda",
+    "deploy": "aws lambda update-function-code --function-name $FUNCTION_NAME --zip-file fileb://lambda.zip",
+    "nest:build": "ncc build src/server.ts --minify --out build/server",
+    "nest:start": "node build/server",
     "start:dev": "NODE_ENV=development nest start --debug",
     "start:watch": "NODE_ENV=development nest start --debug --watch",
     "typecheck": "tsc --noEmit",
@@ -48,7 +48,6 @@
     "rxjs": "^7.8.0",
     "typeorm": "^0.3.15",
     "typeorm-naming-strategies": "^4.1.0",
-    "zod": "^3.21.4",
     "zod-to-json-schema": "^3.20.4"
   },
   "devDependencies": {
