--- a/.github/actions/terraform/action.yaml
+++ b/.github/actions/terraform/action.yaml
@@ -52,6 +52,7 @@ runs:
       run: |
         terraform apply -auto-approve
         terraform output -json | jq -r 'keys[] as $k | "\($k)=\(.[$k] | .value)"' >> $GITHUB_ENV
+        terraform output -json | jq -r 'keys[] as $k | "\($k)=\(.[$k] | .value)"' >> $GITHUB_OUTPUT
       env:
         TF_VAR_DATABASE_URL: ${{ steps.dburl.outputs.DATABASE_URL }}
       # Check outputs at /terraform/outputs.tf
