--- a/.github/workflows/on-pr.yaml
+++ b/.github/workflows/on-pr.yaml
@@ -9,8 +9,23 @@ concurrency:
   group: ephemeral-pr-${{ github.event.pull_request.number }}
 
 jobs:
-  ci:
-    uses: ./.github/workflows/ci.yaml
+  checks:
+    uses: ./.github/workflows/checks.yaml
+
+  local-tests:
+    uses: ./.github/workflows/local-tests.yaml
+    needs: checks
+
+  sandbox-deploy:
+    uses: ./.github/workflows/deploy.yaml
+    needs: checks
     secrets: inherit
     with:
-      environment: ephemeral-pr-${{ github.event.pull_request.number }}
+      environment: sandbox
+
+  sandbox-tests:
+    uses: ./.github/workflows/acceptance-tests.yaml
+    needs: sandbox-deploy
+    secrets: inherit
+    with:
+      API_BASE_URL: jobs.sandbox-deploy.outputs.API_BASE_URL
