--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -12,20 +12,37 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  ci:
-    uses: ./.github/workflows/ci.yaml
+  checks:
+    uses: ./.github/workflows/checks.yaml
+
+  local-tests:
+    uses: ./.github/workflows/local-tests.yaml
+    needs: checks
+
+  sandbox-deploy:
+    uses: ./.github/workflows/deploy.yaml
+    needs: checks
     secrets: inherit
     with:
       environment: sandbox
 
+  sandbox-tests:
+    uses: ./.github/workflows/acceptance-tests.yaml
+    needs: sandbox-deploy
+    secrets: inherit
+    with:
+      API_BASE_URL: jobs.sandbox-deploy.outputs.API_BASE_URL
+
   clear:
-    needs: ci
+    needs: sandbox-tests
     uses: ./.github/workflows/clear.yaml
     secrets: inherit
     with:
       environment: sandbox
 
   cd:
-    needs: ci
-    uses: ./.github/workflows/cd.yaml
+    needs: sandbox-tests
+    uses: ./.github/workflows/deploy.yaml
     secrets: inherit
+    with:
+      environment: main
