--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -26,11 +26,20 @@ jobs:
         shell: bash
         name: Dependencies
 
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ${{ github.workspace }}/packages/*/.eslintcache
+          key: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+
       - name: Prettier
         run: npx prettier --check .
 
       - name: ESLint
-        run: npm run lint --workspaces --if-present
+        run: npm run lint:cached --workspaces --if-present
 
       - name: Typescript
         run: npm run typecheck --workspaces --if-present
