--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "deploy": "npm run deploy --workspaces --if-present",
     "typecheck": "npm run typecheck --workspaces --if-present",
     "lint:fix": "npm run lint:fix --workspaces --if-present",
+    "lint:cached": "npm run --workspaces --if-present lint:cached",
+    "lint": "npm run --workspaces --if-present lint",
     "start:dev": "DEBUG=1 concurrently --kill-others --kill-others-on-fail \"npm run start:dev --workspace packages/server\" \"npm run start:dev --workspace packages/client\"",
     "start:watch": "DEBUG=1 concurrently --kill-others --kill-others-on-fail \"npm run start:watch --workspace packages/server\" \"npm run start:watch --workspace packages/client\""
   },
