--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,8 +9,9 @@
     "build": "next build",
     "deploy": "aws s3 sync ./out/ s3://$WEBSITE_BUCKET/ --delete",
     "start": "next start -p 3001",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "lint": "eslint \"src/**/*.{ts,tsx}\"  lint",
+    "lint:cached": "eslint \"src/**/*.{ts,tsx}\" --cache",
+    "lint:fix": "eslint \"src/**/*.{ts,tsx}\"  lint --fix",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
