--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -31,9 +31,9 @@ jobs:
           path: |
             ${{ github.workspace }}/packages/*/.eslintcache
           key: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+            ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+            ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}-
 
       - name: Prettier
         run: npx prettier --check .
