--- a/.github/workflows/acceptance-tests.yaml
+++ b/.github/workflows/acceptance-tests.yaml
@@ -21,9 +21,8 @@ jobs:
         with:
           cache: 'npm'
           cache-dependency-path: |
-            package.json
             package-lock.json
-            packages/*/package.json
+          node-version: 18
 
       - run: npm install
         shell: bash
