--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -31,7 +31,7 @@ jobs:
     needs: sandbox-deploy
     secrets: inherit
     with:
-      API_BASE_URL: jobs.sandbox-deploy.outputs.API_BASE_URL
+      API_BASE_URL: ${{ jobs.sandbox-deploy.outputs.API_BASE_URL }}
 
   clear:
     needs: sandbox-tests
