--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -15,33 +15,27 @@ jobs:
   checks:
     uses: ./.github/workflows/checks.yaml
 
-  local-tests:
-    uses: ./.github/workflows/local-tests.yaml
+  tests:
+    uses: ./.github/workflows/unit.yaml
     needs: checks
 
-  sandbox-deploy:
+  sandbox:
     uses: ./.github/workflows/deploy.yaml
+    name: Sandbox
     needs: checks
     secrets: inherit
     with:
       environment: sandbox
 
-  sandbox-tests:
-    uses: ./.github/workflows/acceptance-tests.yaml
-    needs: sandbox-deploy
-    secrets: inherit
-    with:
-      API_BASE_URL: ${{ needs.sandbox-deploy.outputs.API_BASE_URL }}
-
   clear:
-    needs: sandbox-tests
+    needs: sandbox
     uses: ./.github/workflows/clear.yaml
     secrets: inherit
     with:
       environment: sandbox
 
   cd:
-    needs: [sandbox-tests, local-tests]
+    needs: [sandbox, tests]
     uses: ./.github/workflows/deploy.yaml
     secrets: inherit
     with:
