feat: add cloudfront

--- a/.github/workflows/on-pr.yaml
+++ b/.github/workflows/on-pr.yaml
@@ -22,4 +22,4 @@ jobs:
     needs: checks
     secrets: inherit
     with:
-      environment: sandbox
+      environment: pr${{ github.event.pull_request.number }}
