--- a/.github/workflows/on-pr.yaml
+++ b/.github/workflows/on-pr.yaml
@@ -11,10 +11,12 @@ concurrency:
 jobs:
   checks:
     uses: ./.github/workflows/checks.yaml
+    name: Checks
 
   tests:
     uses: ./.github/workflows/unit.yaml
     needs: checks
+    name: Unit
 
   sandbox:
     uses: ./.github/workflows/deploy.yaml
@@ -22,3 +24,11 @@ jobs:
     secrets: inherit
     with:
       environment: pr${{ github.event.pull_request.number }}
+
+  acceptance:
+    uses: ./.github/workflows/acceptance.yaml
+    name: Acceptance
+    needs: sandbox
+    secrets: inherit
+    with:
+      API_BASE_URL: ${{ needs.sandbox.outputs.API_BASE_URL }}
